--- a/vercel.json
+++ b/vercel.json
@@ -3,3 +3,17 @@
     { "source": "/(.*)", "destination": "/" }
   ]
 }
+
+{
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' https://assets.calendly.com; style-src 'self' 'unsafe-inline' https://assets.calendly.com; img-src 'self' data: https://assets.calendly.com; frame-src https://calendly.com https://assets.calendly.com; connect-src 'self' https://calendly.com https://*.calendly.com https://assets.calendly.com;"
+        }
+      ]
+    }
+  ]
+}
