--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' https://assets.calendly.com; style-src 'self' 'unsafe-inline' https://assets.calendly.com; img-src 'self' data: https://assets.calendly.com; frame-src https://calendly.com https://assets.calendly.com;"
+          "value": "default-src 'self'; script-src 'self' https://assets.calendly.com; style-src 'self' 'unsafe-inline' https://assets.calendly.com; img-src 'self' data: https:; frame-src https://calendly.com https://assets.calendly.com; connect-src 'self' https://formspree.io https://api.formspree.io; frame-ancestors 'self'; base-uri 'self'; form-action 'self' https://formspree.io"
         }
       ]
     }
