--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' https://assets.calendly.com; style-src 'self' 'unsafe-inline' https://assets.calendly.com; img-src 'self' data: https:; frame-src https://calendly.com https://assets.calendly.com; connect-src 'self' https://formspree.io https://api.formspree.io; frame-ancestors 'self'; base-uri 'self'; form-action 'self' https://formspree.io"
+          "value": "default-src 'self' https: data: blob:; img-src 'self' https: data:; script-src 'self' https: 'unsafe-inline' 'unsafe-eval'; style-src 'self' https: 'unsafe-inline'; font-src 'self' https: data:; connect-src 'self' https:; frame-src https://tally.so https://embed.tally.so https://*.stripe.com https://js.stripe.com https://*.calendly.com https://www.youtube.com https://player.vimeo.com; frame-ancestors 'self'; upgrade-insecure-requests"
         }
       ]
     }
